Fix header spacing on mobile and cursor hover only for links

--- a/css/header.css
+++ b/css/header.css
@@ -1,13 +1,13 @@
 .header h1 {
   font-family: 'Tajawal',sans-serif;
   font-size: 2vh;
-  cursor: pointer;
   vertical-align: top;
 }
 
 .header a {
   text-decoration: none;
   color: #000;
+  cursor: pointer;
 }
 
 .header {
@@ -28,6 +28,10 @@
   justify-content: space-between;
   flex-direction: row-reverse;
   padding-right: 5vw;
+}
+
+.header-filters h1 {
+  cursor: pointer;
 }
 
 .filter:before {
@@ -91,6 +95,7 @@
 
   .header-logo {
     order: 1;
+    margin-bottom: 5px;
   }
 
   .header-title {
